# ssec-cli

./: .gitignore  .pre-commit-config.yaml  README.md  onboarded.md  pixi.toml  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: config.yml
src/ssec_cli/: __init__.py  main.py
