[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssec-cli"
version = "0.1.0"
description = "A CLI tool built with typer"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["typer>=0.9.0"]

[project.urls]
Homepage = "https://github.com/yourusername/ssec-cli"
Repository = "https://github.com/yourusername/ssec-cli"

[project.scripts]
ssec = "ssec_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ssec_cli"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/pyproject.toml"]

[tool.flake8]
max-line-length = 120
